# hand-isomorphism

./: CMakeLists.txt
src/: CMakeLists.txt  hand_index.h
